# flask-signup

./: .gitignore  Dockerfile  README.md  app.py  bower.json  database.py  pyproject.toml  requirements.txt
static/: app.js
templates/: email_layout.html  email_token.html  get_data_form.html  get_email_token.html  index.html  layout.html  new_key.html
